# mcp

./: Cargo.toml  README.md  debug.sh
config/: server.json
src/: error.rs  lib.rs  protocol_old.rs  transport_old.rs
src/client/: mod.rs
src/logging/: mod.rs
src/prompts/: mod.rs
src/protocol/: mod.rs
src/resource/: mod.rs
src/server/: config.rs  mod.rs  server_old.rs
src/tools/: calculator.rs  mod.rs  test_tool.rs
src/tools/file_system/: mod.rs
src/transport/: mod.rs
tests/: client.rs  notification_tests.rs  resources.rs  tools.rs
