[package]
name = "mcp_rs"
description = "a library for making MCP (Model Context Protocol) compatible programs with rust"
version = "0.1.0"
edition = "2021"
authors = ["Emil Lindfors <[email protected]>"]
keywords = ["gen", "anthropic", "mcp_protocol", "mcp"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
async-trait = "0.1.83"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
thiserror = "2.0.3"
tracing = "0.1.40"
tokio-util = "0.7.12"
jsonrpc-core = "18.0.0"
warp = "0.3.7"
jsonrpc-derive = "18.0.0"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
url = "2.5.4"
base64 = "0.22.1"
async-stream = "0.3.6"
mime_guess = "2.0.5"
tracing-subscriber = { version ="0.3.18", features = ["env-filter"]}
config = "0.14.1"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"]}
reqwest-eventsource = "0.6.0"

[[bin]]
name = "server"
path = "bin/server.rs"

[dev-dependencies]
tempfile = "3.14.0"
